# R4C

./: .env.template  Makefile  pyproject.toml
R4C/: settings.py  urls.py
customers/: apps.py  services.py
customers/migrations/: 0001_initial.py
fixtures/: order_data.json  robot_data.json  robots.json
orders/: forms.py  services.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py
robots/: apps.py  forms.py  services.py  signals.py  tests.py  urls.py  views.py
robots/migrations/: 0001_initial.py
services/: __init__.py  validator.py
