[tool.poetry]
name = "r4c"
version = "0.1.0"
description = "Robots for consumers"
authors = ["Dmitry Ibragimov"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^4.2.5"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
pandas = "^2.1.1"
xlsxwriter = "^3.1.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", 'I']  # Default + iSort
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = []
per-file-ignores = {}

line-length = 92